--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
 
-  <title>Landing page</title>
+  <title>A URL shortener</title>
 </head>
 
 <body>
